[package]
name = "openai-proxy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poem = {version = "1.2", features = ["anyhow", "sse"]}
poem-openapi = {version = "3.0", features = ["swagger-ui"]}
tokio = {version = "1", features = ["full"]}
anyhow = "1.0"
tracing-subscriber = "0.3"
async-openai = "0.14"
